# wellspring_directory

./: .env.example  .gitignore  APPLESCRIPT_AUTOMATION_GUIDE.md  CHAPTER_FORMATTING_STRATEGY.md  CLAUDE.md  EM_DASH_AGENT_UNLEASHED_COMPLETE.md  EM_DASH_LOGGING_STRUCTURE.md  README.md  RULES_MIGRATION_COMPLETE.md  SETUP_COMPLETE.md  SYSTEM_STATUS.md  TTS_USAGE_GUIDE.md  VISUAL_BATCH_EXECUTION_PLAN.md  __init__.py  agent_assessment_report.md  apply_brian_formatting.sh  auto_generate_images.py  chapter1_voice_sample.py  chapter_formatting_agent.py  check_permissions.scpt  config.json  demo_complete_system.py  demo_uv_package.py  diagnostic_content_scanner.jsx  experiment.sh  fixed_script.sh  import_to_indesign.sh  main.py  pyproject.toml  quick_test_commands.sh  restore_backup.sh  setup_wellspring.sh  submit_batch_now.py  test_api_keys.sh  test_applescript_simple.scpt  test_british_voice.py  test_package_structure.py  test_rules_access.py  test_system.py  toc_line_spacing_formatter.jsx  (+24 more)
.cursor/: __init__.py  mcp.json
.cursor/rules/: __init__.py  agent_roles.mdc  em_dash_rules.mdc  global_rules.mdc  setup_guide.mdc
backup_before_applescript_20250526_183610/: chapter_formatting_report_20250526_175248.json  wellspring_chapter_formatting.jsx
batch_prompts/: INSTALLATION_COMPLETE.md  MONITORING_GUIDE.md  README.md  batch_endpoint.py  check_completion.py  check_status.py  example_usage.py  openai_batch_processor.py  run_verbose_demo.py  setup_batch_processing.sh  test_installation.py
batch_prompts/input/: wellspring_batch_tasks_20250526_172330.jsonl  wellspring_batch_tasks_20250526_172651.jsonl
batch_prompts/output/: latest_job_info.json
chapter_formatting_backups/backup_20250526_184503/: wellspring_formatting_20250526_180058.txt  wellspring_template_20250526_180058.idml
chapter_formatting_backups/backup_20250526_184648/: wellspring_formatting_20250526_180058.xml  wellspring_instructions_20250526_180058.html
deep_research_agent/: __init__.py
deep_research_agent/citations/: __init__.py
docs/: InDesign Automation Research Brief_.md  InDesign Automation Research and Development Report.mhtml  The Wellspring.indd  __init__.py  arxiv-paper-indesign.md  grok-research-code-examples.md  infograph-2.md  infograph-agent-context.md  overall-goal.md  requirements.txt  setup.md
docs/docx/: pdf_splitter.py  (+8 more)
em_dash_replacement/: __init__.py  visual_batch_prompts.py
google_adk_agents/: README.md  __init__.py  comprehensive_em_dash_processor.py  comprehensive_manuscript_editor.py  demo_adk_system.py  fix_indentation.py  main.py  pdf_to_text_processor.py  requirements.txt  simple_demo.py  test_rules_access.py
output/: backup_strategy_20250526_190307.md  chapter_formatting_report_20250526_175248.json  format_section_20250526_190837.sh  indesign_import_guide_20250526_185831.md  margins_only_formatter_20250526_190837.jsx  sectional_formatting_plan_20250526_190837.md  wellspring_pdf_workflow.py  wellspring_professional_formatting_20250526_190307.jsx  wellspring_style_guide_20250526_190307.md
rules/: __init__.py  research_rules.md  typography_rules.md  workflow_coordination.md
shared_utils/: __init__.py  agent_coordinator.py
tts_prepared_chapters/: Chapter_01_Foundations.txt  Chapter_02_Strategic_Planning.txt  Chapter_03_Team_Assembly.txt  Chapter_04_Site_Selection.txt  Chapter_05_Stakeholder_Support.txt  Chapter_06_Community_Engagement.txt  Chapter_07_Financial_Planning.txt  Chapter_08_Design_Process.txt  Chapter_09_Design_Best_Practices.txt  Chapter_10_Construction_Management.txt  Chapter_11_Best_Practices.txt  Chapter_12_Operations_Planning.txt  Chapter_13_Quality_Metrics.txt  Chapter_14_Technology_Integration.txt  Chapter_15_Sustainability.txt  Chapter_16_Risk_Management.txt  Chapter_17_Case_Studies.txt  Chapter_18_Implementation.txt  Chapter_19_Call_to_Action.txt  TTS_Processing_Summary.md
wellspring-dashboard/: .env.example  README.md  SETUP_COMPLETE.md  package.json  startup.sh
wellspring_toc_batch_results/: batch_batch_68350604353c81909274ac340fe15c82_results.jsonl  batch_batch_683506cc77cc8190b47611aeff3f7024_results.jsonl
wellspring_toc_image_batch/: wellspring_toc_requests_20250605_142237.jsonl
(+187 files in other folders)
